ecommerce_app/static/css/styles.css
body {
  font-family: "Poppins", sans-serif;
  font-weight: 400;
}
.btn-black {
  background-color: #000; /* Pure black */
  color: #fff; /* Text color - white */
}

.btn-black:hover {
  background-color: #333; /* Darker shade on hover */
  color: #fff; /* Keep text color white on hover */
}
.btn {
  border-radius: 0px;
}
.form-control {
  border-radius: 0px;
}
.card {
  border-radius: 0px;
}
.main-image img {
  width: 100%; /* Adjust the width as per your requirements */
  height: auto;
  max-height: 400px; /* Example maximum height */
  object-fit: contain; /* Keep the image ratio */
}

.thumbnail {
  cursor: pointer;
  border: 2px solid transparent; /* Add some spacing between thumbnails */
  transition: border-color 0.3s ease-in-out;
  max-height: 100px;
}

.thumbnail:hover {
  border-color: #007bff; /* Highlight border on hover */
}
#mainProductImage {
  width: 100%;
  height: 40vh;
}
.breadcrumb {
  background-color: white; /* Change this to your desired color */
}
.selected-card {
  border: 2px solid #000; /* Highlight the selected card */
}

.bg-black {
  background-color: #000;
}

.tag-label {
  background-color: #f8f9fa; /* Light background by default */
  color: #212529; /* Dark text by default */
  transition: background-color 0.3s ease, color 0.3s ease;
}

.selected-label {
  background-color: #000; /* Black background when selected */
  color: #fff; /* White text when selected */
}
.page-link:hover {
  opacity: 0.9;
}
.page-link.bg-black:hover {
  background-color: #000;
}
.banner {
  background-color: black;
  color: white;
  height: 95vh;
}
.category-link:hover {
    background-color: rgba(255, 255, 255, 0.1); /* Slight background change on hover */
    text-decoration: none; /* Remove underline on hover */

}

